--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2515,10 +2515,43 @@ a {
     left: -1rem;
   }
 }
+.cid-sIHl7tzJ14 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-image: url("../../../assets/images/image2-1.png");
+}
+.cid-sIHl7tzJ14 .card-wrapper {
+  background: #353535;
+  border-radius: 4px;
+}
+@media (max-width: 767px) {
+  .cid-sIHl7tzJ14 .card-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-sIHl7tzJ14 .card-wrapper {
+    padding: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-sIHl7tzJ14 .card-wrapper {
+    padding: 4rem;
+  }
+}
+.cid-sIHl7tzJ14 .card-title {
+  text-align: left;
+  color: #ffffff;
+}
+.cid-sIHl7tzJ14 .mbr-text,
+.cid-sIHl7tzJ14 .mbr-section-btn {
+  text-align: left;
+  color: #fafafa;
+}
 .cid-sIHl7tzJ13 {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-image: url("../../../assets/images/image2-6.png");
+  background-image: url("../../../assets/images/image2.png");
 }
 .cid-sIHl7tzJ13 .card-wrapper {
   background: #353535;
