--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2518,7 +2518,7 @@ a {
 .cid-sIHl7tzJ14 {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-image: url("../../../assets/images/image2-1.png");
+  background-image: url("../../../assets/images/image2.jpg");
 }
 .cid-sIHl7tzJ14 .card-wrapper {
   background: #353535;
@@ -2551,7 +2551,7 @@ a {
 .cid-sIHl7tzJ13 {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-image: url("../../../assets/images/image2.png");
+  background-image: url("../../../assets/images/image1.png");
 }
 .cid-sIHl7tzJ13 .card-wrapper {
   background: #353535;
