--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,10 +69,25 @@ nav {
   .social:hover {
     opacity: 50%;
   }
+  .dropdown {
+    margin: 0.75rem;
+    position: absolute;
+    background-color: #f5f5f5;
+    box-shadow: 0px 0px 12px 0.1px #d0d0d0;
+    padding: 0.25rem 0.5rem;
+    border-radius: 7px;
+    right: 0;
+    top: 6rem;
+    display: none;
+    opacity: 0;
+    transition: 0.3s;
+  }
 }
 
 footer {
   font-family: Jost, "Noto Sans Japanese", sans-serif;
+  position: relative;
+  width: 100%;
   background-color: white;
   bottom: 0px;
   z-index: 3;
@@ -112,7 +127,7 @@ footer {
   position: relative;
   position: relative;
   cursor: pointer;
-    background-color: #f5f5f5;
+  background-color: #f5f5f5;
   border-radius: 12px;
   transition: 0.25s ease-in-out;
   span {
@@ -536,23 +551,11 @@ footer {
     }
   }
 }
-
 @media screen and (min-width: 1125px) and (max-width: 1620px) {
   /*if(width<1700px&&width>=1335px)*/
 
   nav {
     .dropdown {
-      margin: 0.75rem;
-      position: absolute;
-      background-color: #f5f5f5;
-      box-shadow: 0px 0px 12px 0.1px #d0d0d0;
-      padding: 0.25rem 0.5rem;
-      border-radius: 7px;
-      right: 0;
-      top: 6rem;
-      opacity: 0;
-      transition: 0.3s;
-      display: none;
       .dropdown-social {
         position: relative;
         width: 17.5rem;
@@ -616,17 +619,6 @@ footer {
       width: 100px;
     }
     .dropdown {
-      margin: 0.75rem;
-      position: absolute;
-      background-color: #f5f5f5;
-      box-shadow: 0px 0px 12px 0.1px #d0d0d0;
-      padding: 0.25rem 0.5rem;
-      border-radius: 7px;
-      right: 0;
-      top: 6rem;
-      display: none;
-      opacity: 0;
-      transition: 0.3s;
       .dropdown-social,
       .dropdown-menu {
         position: relative;
