--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,18 @@
+@import url("/assets/css/fonts/jost.css");
+@import url('/assets/css/fonts/noto-sans-jp.css');
+@import url('/assets/css/fonts/plus-jarkata-sans.css');
+
 body {
   margin: 0px;
+  height: 100%;
 }
 main {
   font-family: Jost, "Noto Sans Japanese", sans-serif, --apple-system;
   margin: 0.75rem;
+  height: 100%;
+  margin-bottom: 0;
+  margin-top: 0;
+  min-height: calc(100vh - 10rem);
 }
 hr {
   margin: 2rem 0px;
@@ -12,9 +21,10 @@ nav {
   z-index: 4;
   position: -webkit-sticky;
   position: sticky;
+  /*   width:100%; */
   top: 10px;
   background-color: #f5f5f5;
-  font-family: Jost, "Noto Sans Japanese", sans-serif, --apple-system;
+  font-family: "Plus Jakarta Sans", "Noto Sans Japanese", sans-serif, --apple-system;
   font-size: 1.25rem;
   padding: 4px;
   margin: 10px;
@@ -84,17 +94,18 @@ nav {
   }
 }
 
-footer {
-  font-family: Jost, "Noto Sans Japanese", sans-serif;
-  position: relative;
-  width: 100%;
+.footer {
+  font-family: Jost, "Plus Jakarta Sans", "Noto Sans Japanese", sans-serif;
+  height: 1rem;
+  position: sticky;
+  /*   width: 100%; */
   background-color: white;
-  bottom: 0px;
+  /*   bottom: 0; */
+  /*   left:0; */
   z-index: 3;
   padding: 1rem;
   background-color: #ddd;
   margin: 0px;
-  margin-top: 1rem;
   text-align: center;
 }
 
@@ -129,9 +140,9 @@ footer {
   cursor: pointer;
   background-color: #f5f5f5;
   border-radius: 12px;
-  transition: 0.25s ease-in-out;
+  transition: 0.2s ease-in-out;
   span {
-    transition: 0.25s ease-in-out;
+    transition: 0.2s ease-in-out;
     box-sizing: border-box;
     display: block;
     background-color: #000;
@@ -152,13 +163,13 @@ footer {
       margin: 12% 0;
     }
     span:nth-child(1) {
-      transition-delay: 0.3s;
+      transition-delay: 0.2s;
     }
     span:nth-child(2) {
-      transition-delay: 0.4s;
+      transition-delay: 0.3s;
     }
     span:nth-child(3) {
-      transition-delay: 0.5s;
+      transition-delay: 0.4s;
     }
   }
   #cross {
@@ -273,7 +284,7 @@ footer {
   width: 100%;
   height: 100%;
   border-radius: 0.5rem;
-  font-family: Jost, "Noto Sans Japanese", sans-serif, --apple-system;
+  font-family: "Plus Jakarta Sans", "Noto Sans Japanese", sans-serif, --apple-system;
   div {
     color: #fff;
     position: relative;
@@ -334,6 +345,7 @@ footer {
   left: 1rem;
 }
 .pgctrl {
+  font-family: sans-serif, --apple-system;
   z-index: 1;
   position: absolute;
   bottom: 0.5rem;
@@ -367,6 +379,7 @@ footer {
 
 .album-cards {
   margin: auto;
+  margin-bottom: 2.5rem;
   justify-content: center;
   display: grid;
   grid-template-rows: repeat(auto-fill, 23rem);
@@ -426,16 +439,17 @@ footer {
 
 .half-image-cards {
   margin: auto;
+  margin-bottom: 2.5rem;
   justify-content: center;
   display: grid;
-  grid-template-rows: repeat(auto-fill, 23rem);
+  grid-template-rows: repeat(auto-fill, 30rem);
   grid-template-columns: repeat(auto-fill, minmax(23rem, 60rem));
   grid-gap: 1rem;
   .card {
     transition: 0.75s;
     color: black;
     background-color: #ddd;
-    height: 23rem;
+    height: 30rem;
     border-radius: 7px;
     text-decoration: none;
     div {
@@ -467,7 +481,7 @@ footer {
       background-size: cover;
       position: absolute;
       background-position: center left;
-      height: 23rem;
+      height: 30rem;
       width: 30rem;
     }
   }
@@ -484,6 +498,18 @@ footer {
       filter: none;
       opacity: 1;
     }
+  }
+}
+
+.contact-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 23rem);
+    grid-gap: 1rem;
+    justify-content: center;
+    padding: 0;
+  li {
+    border-radius: 7px;
+    background-color: #ddd;
   }
 }
 
@@ -525,12 +551,18 @@ footer {
 .release-track {
   background-size: cover;
   background-position: center;
-  padding: 5% 20%;
+  height: 100%;
+  min-height: calc(100vh - 25rem);
+  padding: 5vw 5vw;
+  border-radius: 10px;
+  border: 1px solid #ddd;
   strong {
     color: #fff;
   }
   .text-box {
+    margin: 25% 0;
     background-color: rgba(0, 0, 0, 75%);
+    height: 100%;
     color: #ddd;
     padding: 2rem;
     border-radius: 7px;
@@ -550,6 +582,40 @@ footer {
       background-size: 100% 0.2em;
     }
   }
+}
+
+/* info */
+.info {
+  text-decoration: none;
+  list-style-type: none;
+  font-size: 1.4rem;
+  li {
+    padding: 1rem;
+  }
+  a {
+    text-decoration: none;
+    color: #46f;
+    background-size: 0% 0.2em;
+    background-image: linear-gradient(#46f, #46f);
+    background-position-y: 104%;
+    background-position-x: 0%;
+    background-repeat: no-repeat;
+    transition: 0.3s ease-in-out;
+  }
+  a:hover {
+    opacity: 70%;
+    background-size: 100% 0.2em;
+  }
+  .title {
+    font-size: 1.6rem;
+  }
+}
+.subdiv {
+  padding: 1rem;
+}
+.long-br {
+  display: block;
+  height: 2rem;
 }
 @media screen and (min-width: 1125px) and (max-width: 1620px) {
   /*if(width<1700px&&width>=1335px)*/
