New UI Update, still WIP

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 @import url("/assets/css/fonts/jost.css");
-@import url('/assets/css/fonts/noto-sans-jp.css');
-@import url('/assets/css/fonts/plus-jarkata-sans.css');
+@import url("/assets/css/fonts/noto-sans-jp.css");
+@import url("/assets/css/fonts/plus-jarkata-sans.css");
+@import url("/assets/css/old.css");
 
 body {
   margin: 0px;
@@ -12,7 +13,7 @@ main {
   height: 100%;
   margin-bottom: 0;
   margin-top: 0;
-  min-height: calc(100vh - 10rem);
+  min-height: calc(100vh - 10vh);
 }
 hr {
   margin: 2rem 0px;
@@ -24,7 +25,8 @@ nav {
   /*   width:100%; */
   top: 10px;
   background-color: #f5f5f5;
-  font-family: "Plus Jakarta Sans", "Noto Sans Japanese", sans-serif, --apple-system;
+  font-family: "Plus Jakarta Sans", "Noto Sans Japanese", sans-serif,
+    --apple-system;
   font-size: 1.25rem;
   padding: 4px;
   margin: 10px;
@@ -96,7 +98,6 @@ nav {
 
 .footer {
   font-family: Jost, "Plus Jakarta Sans", "Noto Sans Japanese", sans-serif;
-  height: 1rem;
   position: sticky;
   /*   width: 100%; */
   background-color: white;
@@ -107,6 +108,7 @@ nav {
   background-color: #ddd;
   margin: 0px;
   text-align: center;
+  align-content: center;
 }
 
 /*---nav---*/
@@ -284,7 +286,8 @@ nav {
   width: 100%;
   height: 100%;
   border-radius: 0.5rem;
-  font-family: "Plus Jakarta Sans", "Noto Sans Japanese", sans-serif, --apple-system;
+  font-family: "Plus Jakarta Sans", "Noto Sans Japanese", sans-serif,
+    --apple-system;
   div {
     color: #fff;
     position: relative;
@@ -502,11 +505,11 @@ nav {
 }
 
 .contact-cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 23rem);
-    grid-gap: 1rem;
-    justify-content: center;
-    padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 23rem);
+  grid-gap: 1rem;
+  justify-content: center;
+  padding: 0;
   li {
     border-radius: 7px;
     background-color: #ddd;
@@ -617,8 +620,8 @@ nav {
   display: block;
   height: 2rem;
 }
-@media screen and (min-width: 1125px) and (max-width: 1620px) {
-  /*if(width<1700px&&width>=1335px)*/
+@media screen and (width >= 1125px) and (width<=1620px) {
+  /*if(width<1620px&&width>=1125px)*/
 
   nav {
     .dropdown {
@@ -666,8 +669,8 @@ nav {
   }
 }
 
-@media screen and not (min-width: 1125px) {
-  /*if(width<1185px)*/
+@media screen and (width<1125px) {
+  /*if(width<1125px)*/
 
   nav {
     font-size: 1.4rem;
