--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -657,6 +657,17 @@ nav {
     padding: 1rem 1rem;
     margin-bottom: 1.5rem;
   }
+
+  .box {
+    height:2rem;
+    width: 100%;
+    text-align: center;
+    border-radius: 5px;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem 0.5rem;
+  }
 }
 
 textarea,
