--- a/assets/css/old.css
+++ b/assets/css/old.css
@@ -643,6 +643,17 @@ nav .dropdown {
   margin-bottom: 1.5rem;
 }
 
+.contact-email .box {
+  height: 2rem;
+  width: 100%;
+  text-align: center;
+  border-radius: 5px;
+  margin: auto;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem 0.5rem;
+}
+
 textarea,
 textfield {
   padding: 5px;
