test #4.1 another UI test

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -666,7 +666,8 @@ nav {
     margin: auto;
     align-items: center;
     justify-content: center;
-    padding: 0.5rem 0.5rem;
+    padding: 0.5rem 0px;
+    margin-bottom: 1.5rem;
   }
 }
 
