Update font source URL for Nerd Fonts
Update for better icon-loading traffic.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -713,7 +713,7 @@ textfield {
 
 @font-face {
   font-family: "NerdFontsSymbols Nerd Font";
-  src: url("/assets/fonts/nf-symbols.woff2") format("woff2");
+  src: url("https://github.com/t404owo/t404null/raw/refs/heads/main/assets/fonts/nf-symbols.woff2") format("woff2");
 }
 
 .nf-icons {
